Minor update.
git-svn-id: svn://192.168.99.101/dda/trunk/ddiftp/ddieditor-ui@2689 47c8fc04-09cc-d246-8e9e-e5ba08b125bf